# simple_chat_agent

./: README.md  pyproject.toml
chat/: component.yaml  run.py  schemas.py
run_ollama/: component.yaml  run.py
simple_chat_agent/: component.yaml  run.py  schemas.py
simple_chat_agent/configs/: agent_deployments.json  deployment.json
